tests/lean/guessLex.lean.expected.out
Inferred termination argument:
termination_by (n, m)
Inferred termination argument:
termination_by (m, n)
Inferred termination argument:
termination_by (n, m)
Inferred termination argument:
termination_by x1 x2 => (x2, x1)
Inferred termination argument:
termination_by x1 => x1
Inferred termination argument:
termination_by x1 => x1
Inferred termination argument:
termination_by x1 => x1
Inferred termination argument:
termination_by x1 => x1
Inferred termination argument:
termination_by x1 => (x1, 0)
Inferred termination argument:
termination_by (n, 1)
Inferred termination argument:
termination_by (m, n)
Inferred termination argument:
termination_by x1 x2 x3 x4 x5 x6 x7 x8 => (x8, x7, x6, x5, x4, x3, x2, x1)
Inferred termination argument:
termination_by x1 => sizeOf x1
Inferred termination argument:
termination_by n m => (n, sizeOf m)
Inferred termination argument:
termination_by m acc => m
Inferred termination argument:
termination_by (sizeOf a, 1)
Inferred termination argument:
termination_by (sizeOf a, 0)
Inferred termination argument:
termination_by x2' => x2'
Inferred termination argument:
termination_by x2 => x2
Inferred termination argument:
termination_by x1 => sizeOf x1
Inferred termination argument:
termination_by x2 => SizeOf.sizeOf x2
Inferred termination argument:
termination_by x1 x2 => SizeOf.sizeOf x1
Inferred termination argument:
termination_by x2 => SizeOf.sizeOf x2
Inferred termination argument:
termination_by x1 => x1
Inferred termination argument:
termination_by x1 => sizeOf x1
Inferred termination argument:
termination_by x1 => x1
Inferred termination argument:
termination_by sizeOf o
guessLex.lean:217:0-229:3: error: Could not find a decreasing measure.
The arguments relate at each recursive call as follows:
(<, ≤, =: relation proved, ? all proofs failed, _: no proof attempted)
Call from MutualNotNat3.foo to MutualNotNat3.bar at 221:23-35:
   x1
x1  <
Call from MutualNotNat3.bar to MutualNotNat3.foo at 226:30-42:
   x1
x1  ?

Please use `termination_by` to specify a decreasing measure.
